<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<!-- first name last name phone number address -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvfname"
            android:textSize="12pt"
            android:text="@string/tvfname"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etfname"
            android:inputType="text"
            android:textSize="12pt"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvsname"
            android:textSize="12pt"
            android:text="@string/tvsname"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etsname"
            android:inputType="text"
            android:textSize="6pt"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvphone"
            android:textSize="6pt"
            android:text="@string/tvphone"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etphone"
            android:inputType="phone"
            android:textSize="12pt"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addeditcontact"
        android:id="@+id/btn_add_or_edit_contact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletecontact"
        android:id="@+id/btndeletecontact" />
</LinearLayout>
